--- a/Kama.Bonyad.Evaluation.WebApp/app/css/style.scss
+++ b/Kama.Bonyad.Evaluation.WebApp/app/css/style.scss
@@ -351,3 +351,6 @@ label.required, .panel-heading.required {
     background-color: #c1e8fb;
     border-color: #93bfc8;
 }
+.font-bold {
+    font-weight: 700;
+}
