--- a/Kama.Bonyad.Evaluation.WebApp/Views/Inside/IndexTemplate.cshtml
+++ b/Kama.Bonyad.Evaluation.WebApp/Views/Inside/IndexTemplate.cshtml
@@ -85,6 +85,14 @@
                     <a ng-click="logout()"><div class="col-xs-3"><span>@ViewBag.Strings.Exit</span><i class="fa fa-power-off"></i></div></a>
                 </div>
             </div>
+            <div class="allertToolBarParent">
+                <div class="allertToolBar alertBackgroundColor1" id="alertColor1">5</div>
+                <div class="allertToolBar alertBackgroundColor2" id="alertColor2">5</div>
+                <div class="allertToolBar alertBackgroundColor3" id="alertColor3">5</div>
+                <div class="allertToolBar alertBackgroundColor4" id="alertColor4">5</div>
+                <div class="allertToolBar alertBackgroundColor5" id="alertColor5">5</div>
+            </div>
+
             <div id="toolbar" class="row">
                 <div class="col-xs-12">
                     <div id="sidebar-switch"><i class="fa fa-bars" aria-hidden="true"></i></div>
